  * Added experimental mode to support multiple aliases for the same UID
    to be able to push renamed components to the cKnowledge.io portal
  * Started breaking CK kernel into sub modules:
    https://github.com/ctuning/ck/issues/107
  * Started improving ck scripts to automatically detect installation (Linux and Windows):
    https://github.com/ctuning/ck/issues/106

* V1.12.3
  * improved tests on Linux, MacOS and Windows
  * prototyped testing of the status of repositories (stable and warning)

* V1.12.2
  * fixed UTF-8 problem with README.md in setup.py

* V1.12.1
  * added first draft of the docs in the Sphinx format
  * fixed repo update
  * added backward compatibility for the search via ElasticSearch
  * do not ask for "web support" by default when adding actions
  * ck webhelp now shows published components at the CodeReef portal
  * ck webapi now shows module API at the CodeReef portal
  * Added "ck codereef <CID>" to show information about published components
    at the CodeReef portal
  * Allowed ' character in names of CK entries
  * Added 2020
  * Simplified Readme

* V1.11.4
  * fixed problem when ck-python.cfg contains non-existent python
  * fixed problem with allowed action_names 
    (should not start with number but can have numbers in the middle)
  * fixed problem with ElasticSearch when renaming entries
  * Added key "use_git_instead_of_https" to kernel cfg 
    to substitute https:// with git@ in repositories
  * fixed problem with pip installation using Python 2.7
    (thanks to Alex Redshaw from Arm)
  * added possibility to log all used CK entries to find out all dependencies

    turn on: ck set kernel --var.log_ck_entries={file}
    turn off: ck set kernel --var.log_ck_entries=""

* V1.11.3
  * minor clean up of the API doc
  * now copying default repo to $HOME/.ck/{version} to be able to always find it
  * added possibility to split dirs for the whole repo 
    (to be able to exchange repos with split directories)